fix: :art: h1 having wrong color

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -205,7 +205,6 @@ button {
 
 h1 {
   font-size: 24px;
-  color: #333;
 }
 
 .ltr {
